tests/error/misc_errors/match_type_mismatch4.err
Error: Type mismatch (at $FILE:15:22)
   | 
13 | def main(d: Enum[T]) -> None:         # pyright: ignore[reportInvalidTypeForm]
14 |     match d:
15 |         case Enum.Var(1):
   |                       ^ Expected pattern of type `T`, got `int`

Guppy compilation failed due to 1 previous error
